<resources>
    <string name="app_name">IM Coffee</string>
    <string name="label_account_info">Account Info</string>
    <string name="label_add_balance">Add balance</string>
    <string name="label_manage_users">Manage users</string>
    <string name="label_add_and_remove_users">Add and remove users</string>
    <string name="label_reports">Reports</string>
    <string name="label_generate_pdf_excel">Generate PDF/Excel</string>
    <string name="label_backup">Backup</string>
    <string name="label_export_the_data">Export the data</string>
</resources>